--- a/src/components/features/OrderForm/OrderForm.scss
+++ b/src/components/features/OrderForm/OrderForm.scss
@@ -1,1 +1,8 @@
 @import '../../../styles/settings.scss';
+
+.total {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
